2006-10-03  Michael Natterer  <mitch@gimp.org>

	* app/core/gimppalette-load.[ch]: added functions to load ACT,
	RIFF and PSP palette files but don't use them as data file
	loaders (yet?)

	* app/core/gimppalette-import.c (gimp_palette_import_from_file):
	use the functions instead of implementing all formats inline.

2006-10-03  Michael Natterer  <mitch@gimp.org>

	* app/core/Makefile.am
	* app/core/gimppalette-load.[ch]
	* app/core/gimppalette-save.[ch]: new files.

	* app/core/gimppalette.[ch]: removed loading and saving code here.

	* app/core/gimp.c
	* app/core/gimppalette-import.c: changed accordingly.

2006-10-03  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpgradient-save.[ch]: renamed
	gimp_gradient_save_as_pov() to gimp_gradient_save_pov().

	* app/actions/gradients-commands.c
	(gradients_save_as_pov_ray_response): changed accordingly.

2006-10-03  Michael Natterer  <mitch@gimp.org>

	* app/core/Makefile.am
	* app/core/gimpbrushgenerated-load.[ch]
	* app/core/gimpbrushgenerated-save.[ch]
	* app/core/gimpbrushpipe-load.[ch]: new files.

	* app/core/gimpbrushgenerated.[ch]
	* app/core/gimpbrushpipe.[ch]: removed loading and saving code here.

	* app/core/gimp.c: changed accordingly.

2006-10-03  Michael Natterer  <mitch@gimp.org>

	* app/core/Makefile.am
	* app/core/gimppattern-load.[ch]: new files.

	* app/core/gimppattern.[ch]: removed the loading stuff here.

	* app/core/gimp.c: changed accordingly.

2006-10-03  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpgradient-load.h: keep the file extension defines
	here, just as we do it for brushes.

	* app/core/gimpgradient.h: removed them here.

	* app/core/gimpgradient.c: changed accordingly.

2006-10-03  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-convert.[ch]
	(gimp_image_convert_set_dither_matrix): applied patch from David
	Gowers (bug #359175) and did some further cleanup.

2006-10-03  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/iwarp.c (iwarp_dialog): use a GimpHintBox.
